fix(ui): Fixed wrong font family in button component

--- a/components/Button/button.module.scss
+++ b/components/Button/button.module.scss
@@ -11,6 +11,7 @@
 }
 
 .button {
+  font-family: $font-sans;
   width: 100%;
   border-radius: 2px;
   border: none;
